traces/bug_358.txt
src/medit/inout_morice.c:939: error: DEAD_STORE
  The value written to &k (type int) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:939:7: Write of unused value
937.         assert(mesh->extra->nv);	
938.   
939.         k=1;
             ^
940.         getline_popen_firstelemnoref(natureread, 2, vatn);
941.         nn=vatn[0];
